# fire_depatment_project

./: FD_analysis.ipynb  LICENSE  README.md  pyproject.toml
FD Data/: Data_2012.xlsx  Data_2013.xlsx  Data_2014.xlsx  Data_2015.xlsx  Data_2016.xlsx  Data_2017.xlsx  Data_2018.xlsx  Data_2019.xlsx  Data_2020.xlsx  Data_2021.xlsx  Data_2022.xlsx  Data_2023.xlsx  Fire_Alarm_Districts.geojson  Fire_Battalions.geojson
FD Data/Fire_Alarm_Districts/: Fire_Alarm_Districts.dbf  Fire_Alarm_Districts.shp  Fire_Alarm_Districts.shx  Fire_Alarm_Districts.xml
FD Data/Fire_Stations/: Fire_Stations.dbf  Fire_Stations.shp  Fire_Stations.shx  Fire_Stations.xml
