[project]
name = "bay"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "jupyterlab",
    "pandas", 
    "pymc",
    "pytensor",
    "numpy <2",
    "matplotlib", 
    "seaborn",  
    "scipy", 
    "arviz", 
    "ipywidgets",
    "openpyxl",
    "blackjax",
    "nutpie",
    "bokeh",
    "graphviz",
    "watermark",
    "geopandas",
    "openpyxl",
    "numba",
    "fitter",
    "pymc_extras",
    "natsort"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
